--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	</parent>
 	<groupId>guru.springframework</groupId>
 	<artifactId>sfg_pet_clinic</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<name>sfg_pet_clinic</name>
 	<description>The SFG Pet Clinic project</description>
 
@@ -40,7 +40,7 @@
 
 	<scm>
 		<developerConnection>scm:git:git@github.com:rourei/sfg_pet_clinic.git</developerConnection>
-	  <tag>sfg_pet_clinic-0.0.1</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 </project>
