--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 		<version>2.3.2.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>guru.springframework</groupId>
+	<groupId>com.rourei</groupId>
 	<artifactId>sfg_pet_clinic</artifactId>
 	<version>0.0.3-SNAPSHOT</version>
 	<name>sfg_pet_clinic</name>
